welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: '<-' expected but ')' found.
  for (i<=1 to hauteur){
                      ^Array1:14: error: illegal start of simple expression
} 
^