welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var hauteur = getMondeHauteur()
  
}

def crerTableau(hauteur:Int){
  var T=new Array[Color]
  for (i<=1 to hauteur){
    T(i)=getCouleurSol()
    avance()
  }
  return T
}